# katip

./: .gitignore  .gitmodules  .stack.yaml.swp  .stack.yaml.un~  .travis.yml  LICENSE  Makefile  README.md  TODO.org  docker-compose.yml  katip.cabal  soothsayer.cabal  stack-7.8.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-4.yaml  stack-lts-5.yaml  stack-lts-8.yaml  stack-nightly.yaml  stack.yaml
bench/: Main.hs
examples/: Main.hs
katip/: .katip.cabal.swp  .katip.cabal.un~  LICENSE  Makefile  README.md  changelog.md  katip.cabal  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-13.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-lts-16.yaml  stack-lts-17.yaml  stack-lts-9.yaml  stack.yaml
katip-datadog/: .katip-datadog.cabal.swp  LICENSE  README.md  changelog.md  katip-datadog.cabal  stack.yaml
katip-datadog/src/Katip/Scribes/Datadog/: TCP.hs
katip-datadog/test/: Main.hs
katip-datadog/test/Katip/Tests/Scribes/Datadog/: TCP.hs
katip-elasticsearch/: .katip-elasticsearch.cabal.swp  Makefile  README.md  addSources.sh  changelog.md  docker-compose.yml  katip-elasticsearch.cabal  package.yaml  stack.yaml
katip-elasticsearch/app/: Main.hs
katip-elasticsearch/bench/: Main.hs
katip-elasticsearch/examples/: bulk-example.hs  example.hs
katip-elasticsearch/src/Katip/Scribes/: ElasticSearch.hs
katip-elasticsearch/src/Katip/Scribes/ElasticSearch/: Annotations.hs  Internal.hs
katip-elasticsearch/test/: Main.hs
katip-logzio/: .katip-logzio.cabal.swp  README.md  changelog.md  katip-logzio.cabal  stack.yaml
katip-logzio/src/Katip/Scribes/LogzIO/: HTTPS.hs
katip-logzio/test/: Main.hs
katip-logzio/test/Katip/Tests/Scribes/LogzIO/: HTTPS.hs
katip-monad-logger-compat/: README.md  changelog.md  katip-monad-logger-compat.cabal
katip-monad-logger-compat/src/Katip/Instances/: MonadLogger.hs
katip/bench/: Main.hs
katip/examples/: Main.hs  add_context_loop.hs  example.hs  example_lens.hs
katip/src/: Katip.hs
katip/src/Katip/: Compat.hs  Core.hs  Monadic.hs
katip/src/Katip/Format/: Time.hs
katip/src/Katip/Scribes/: Handle.hs
katip/test/: Main.hs
katip/test/Katip/: Tests.hs
katip/test/Katip/Tests/Format/: Time.hs
katip/test/Katip/Tests/Scribes/: Handle-json-aeson2.golden  Handle-json.golden  Handle-text-aeson2.golden  Handle-text.golden  Handle.hs  json.output  text.output
src/: Katip.hs
src/Katip/: Core.hs
src/Katip/Backends/: Handle.hs
src/Katip/Scribes/: Handle.hs
src/Soothsayer/: Core.hs
src/Soothsayer/Backends/: Handle.hs
