name:                katip
version:             0.1.0.0
synopsis:            A structured logging framework for tagging each log message with its
                     surrounding context.
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc, 2015
category:            Data, Text, Logging
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Katip
    Katip.Core
    Katip.Scribes.Handle

  -- other-modules:       
  default-extensions:    
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    TemplateHaskell
    OverloadedStrings

  build-depends:       
      base >=4.6 && <4.7
    , aeson >=0.7 && <0.8
    , auto-update >= 0.1 && < 0.2
    , blaze-builder >= 0.3 && < 0.4
    , bytestring >= 0.9 && < 0.11
    , containers >=0.5 && <0.6
    , hostname >=1.0 && <1.1
    , lens >=4.2 && <4.7
    , lens-aeson >= 1.0 && < 1.1
    , mtl >=2.1 && <2.2
    , old-locale >= 1.0 && < 1.1
    , string-conv >= 0.1 && < 0.2
    , template-haskell >= 2.8 && < 2.10
    , text >=1.2 && <1.3
    , time >= 1.2 && < 1.5
    , unix >= 2.5 && < 2.8
    , unordered-containers >= 0.2 && < 0.3

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-optoions:        -Wall