name:                katip-elasticsearch
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc, 2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Katip.Scribes.ElasticSearch
  build-depends:
      base >=4.6 && <4.7
    , katip
    , bloodhound >= 0.5 && < 0.6
    , random >= 1.0 && < 1.2
    , uuid >= 1.3 && < 1.4
    , http-client
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  ghc-options: -O2
  build-depends:
                 base
               , katip-elasticsearch
               , bloodhound
               , deepseq
               , criterion >= 0.8 && < 1.0
               , rng-utils
               , uuid
