name:                katip-elasticsearch
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc, 2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Katip.Scribes.ElasticSearch
  build-depends:
      base >=4.6 && <4.7
    , katip
    , bloodhound >= 0.5 && < 0.6
    , random >= 1.0 && < 1.2
    , uuid >= 1.3 && < 1.4
    , aeson >=0.6 && <0.9
    , stm >= 2.4.3 && < 2.5
    , stm-chans >= 3.0.0.2 && < 3.1
    , async >= 2.0.1.0 && < 2.1
    , enclosed-exceptions >= 1.0.0 && < 1.1
    , http-client
    , text
    , retry >= 0.6 && < 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Wall -Werror

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  ghc-options: -O2
  build-depends:
                 base
               , katip-elasticsearch
               , bloodhound
               , deepseq
               , criterion >= 0.8 && < 1.0
               , rng-utils
               , uuid
               , text
