name:                katip-elasticsearch
synopsis:            ElasticSearch scribe for the Katip logging framework.
description:

  katip-elasticsearch is a scribe for the Katip logging framework that
  sends structured logs to ElasticSearch. Some noteworthy features:

  * Built in bounded buffering.

  * Configurable pool of logging workers to help with high write
    volume.

  * Optional field type annotation to avoid mistyping values.

  * Optional automatic date sharding, so logs can be filed into
    monthly, daily, hourly, every minute indices. You can even specify
    your own index routing logic. This pattern can be seen in the ELK
    stack as a way of keeping indexes reasonably sized and easy to
    optimize, rotate, and manage.

  * Customizable retry policy for temporary outages and errors.

  * Automatic index and mapping setup.

version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc, 2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  bench/Main.hs
  test/Main.hs

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Katip.Scribes.ElasticSearch
    Katip.Scribes.ElasticSearch.Annotations
  build-depends:
      base >=4.6 && <5
    , katip
    , bloodhound >= 0.10.0.0 && < 0.11
    , random >= 1.0 && < 1.2
    , uuid >= 1.3 && < 1.4
    , aeson >=0.6 && <0.11
    , stm >= 2.4.3 && < 2.5
    , stm-chans >= 3.0.0.2 && < 3.1
    , async >= 2.0.1.0 && < 2.2
    , enclosed-exceptions >= 1.0.0 && < 1.1
    , http-client
    , text
    , retry >= 0.7 && < 0.8
    , exceptions
    , scientific
    , unordered-containers
    , transformers
    , http-types
    , time
  hs-source-dirs:      src
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Wall -Werror

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  ghc-options: -O2
  build-depends:
                 base
               , katip-elasticsearch
               , bloodhound
               , deepseq
               , criterion >= 1.1.0.0
               , rng-utils
               , uuid
               , text
               , unordered-containers
               , aeson

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language:    Haskell2010
  build-depends:
      katip-elasticsearch
    , katip
    , http-client
    , bloodhound
    , base
    , tasty >= 0.11
    , tasty-hunit
    , tasty-quickcheck
    , quickcheck-instances
    , containers
    , transformers
    , lens
    , lens-aeson
    , text
    , http-types
    , aeson
    , vector
    , unordered-containers
    , scientific
    , time
    , stm

  if flag(lib-Werror)
    ghc-options: -Wall -Werror

  ghc-options: -threaded -rtsopts
