name:                katip-monad-logger-compat
synopsis:            Provides an orphan MonadLogger instance for Katip
description:
  Provides an orphan MonadLogger instance to get existing monad-logger code working with Katip.

  You should use this if:
  1. You want to switch to Katip but don't want to rewrite existing code right away.
  2. There is third party code outside of your control that you would like to integrate into your Katip log system.

  The usual caveats about orphaned instances apply. You should only consider using this if you're working on an application. Library authors should not use this package.
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael.xavier@soostone.com
copyright:           Soostone Inc, 2015-2016
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  changelog.md
tested-with: GHC == 7.8.4, GHC== 7.10.3

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Katip.Instances.MonadLogger
  build-depends:
      base >=4.6 && <5
    , katip
    , monad-logger >= 0.3
    , fast-logger
  hs-source-dirs:      src
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Wall -Werror
