name:                katip
version:             0.8.7.2
synopsis:            A structured logging framework.
description:
  Katip is a structured logging framework. See README.md for more details.

license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman, Michael Xavier
maintainer:          michael.xavier@soostone.com
copyright:           Soostone Inc, 2015-2017
category:            Data, Text, Logging
homepage:            https://github.com/Soostone/katip
bug-reports:         https://github.com/Soostone/katip/issues
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  changelog.md
  examples/example.hs
  examples/example_lens.hs
  bench/Main.hs
  test/Main.hs
  test/Katip/Tests.hs
  test/Katip/Tests/Scribes/Handle.hs
  test/Katip/Tests/Scribes/Handle-text.golden
  test/Katip/Tests/Format/Time.hs
tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2

source-repository head
  type:     git
  location: https://github.com/Soostone/katip.git

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Katip
    Katip.Core
    Katip.Format.Time
    Katip.Monadic
    Katip.Scribes.Handle

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    RecordWildCards
    TemplateHaskell
    OverloadedStrings

  build-depends: base >=4.9.0.0 && <5
               , aeson >=1.0.0.0
               , async >= 2.0.0.0 && < 3.0.0.0
               , auto-update >= 0.1
               , bytestring >= 0.9
               , containers >=0.4
               , either >= 4
               , safe-exceptions >= 0.1.0.0
               , hostname >=1.0
               , old-locale >= 1.0
               , string-conv >= 0.1
               , template-haskell >= 2.8
               , text >= 1.2.4.0
               , time >= 1
               , transformers >= 0.3
               , transformers-compat
               , unordered-containers >= 0.2
               , monad-control >= 1.0
               , mtl >= 2.0
               , transformers-base >= 0.3
               , resourcet >= 1.2.0
               , scientific >= 0.3.3.0
               , microlens >= 0.2.0.0
               , microlens-th >= 0.1.0.0
               , semigroups
               , unliftio-core >= 0.1
               , stm >= 2.4.4.1

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
  if flag(lib-Werror)
    ghc-options: -Werror
  if os(windows)
    build-depends: Win32 >=2.3 && <2.9
    exposed-modules: Katip.Compat
  else
    build-depends: unix >= 2.5 && <2.8


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Katip.Tests.Format.Time
    Katip.Tests.Scribes.Handle
    Katip.Tests
  default-language:    Haskell2010
  build-depends: base
               , katip
               , aeson
               , bytestring
               , tasty >= 0.10.1.2
               , tasty-golden
               , tasty-hunit
               , tasty-quickcheck
               , quickcheck-instances
               , template-haskell
               , text
               , time
               , time-locale-compat >= 0.1.0.1
               , directory
               , regex-tdfa
               , unordered-containers
               , microlens
               , containers
               , stm
               , safe-exceptions
  ghc-options: -Wall
  if flag(lib-Werror)
    ghc-options: -Werror


benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  if flag(lib-Werror)
    ghc-options: -Werror
  build-depends:
                 base
               , aeson
               , blaze-builder
               , katip
               , criterion >= 1.1.0.0
               , unix
               , text
               , time
               , transformers
               , deepseq
               , async
               , filepath
               , safe-exceptions
               , directory
